deploy/overlays/local/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: April-bff-pprof
  namespace: app-April
spec:
  type: NodePort
  ports:
    - name: pprof
      port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: April-bff
