deploy/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-April
  name: April-bff
spec:
  rules:
    - host: April-bff-k8s.April.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: April-bff
                port:
                  number: 8000
